# ecs-service

./: .bazelrc  .gitignore  README.md
core/: BUILD  WORKSPACE  deps.bzl
core/protocol/: tsconfig.json
core/protocol/src/: BUILD.bazel  domain.proto
core/protocol/src/command/: command.proto
core/protocol/src/session/: BUILD.bazel  session.proto
core/protocol/src/sync/: BUILD.bazel  sync.proto
core/server/: BUILD  Makefile  go.mod  go.sum
core/server/src/: BUILD.bazel
core/server/src/config/: BUILD.bazel
core/server/src/controller/: BUILD.bazel  handler.go  log.go  principal.go
core/server/src/presence/: heartbeat.go
core/server/src/server/: websocket.go
core/server/src/session/: BUILD.bazel  state.go
core/server/src/world/: BUILD.bazel  factory.go  field.go  map.go
core/server/src/world/component/: player.go
core/server/src/world/system/: BUILD.bazel
protocol/: BUILD.bazel  Makefile  tsconfig.json
protocol/src/command/: BUILD.bazel  command.proto
server/: go.mod  go.sum
server/src/: BUILD.bazel  main.go
server/src/config/: log.go
server/src/controller/: BUILD.bazel  context.go  principal.go
server/src/presence/: BUILD.bazel  store.go  user.go
server/src/server/: BUILD.bazel  websocket.go
server/src/session/: create.go  state.go  store.go
server/src/world/: BUILD.bazel  factory.go  prakriti.go
server/src/world/component/: BUILD.bazel  transform.go
server/src/world/system/: player.go
