load("@rules_proto//proto:defs.bzl", "proto_lang_toolchain", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "go_proto",
    srcs = ["domain.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "go_go_proto",
    importpath = "goland/protocol/gen/go",
    proto = ":go_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go",
    embed = [":go_go_proto"],
    importpath = "goland/protocol/gen/go",
    visibility = ["//visibility:public"],
)
