load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "session_proto",
    srcs = ["session.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "session_go_proto",
    importpath = "goland/protocol/gen/go/session",
    proto = ":session_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "session",
    embed = [":session_go_proto"],
    importpath = "goland/protocol/gen/go/session",
    visibility = ["//visibility:public"],
)
