load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "controller",
    srcs = [
        "context.go",
        "handler.go",
        "log.go",
        "principal.go",
        "@com_github_golang_jwt_jwt_v4//:jwt",
    ],
    importpath = "goland/server/src/controller",
    visibility = ["//visibility:public"],
)
